add intro + conclusion + source

--- a/chapitre1.tex
+++ b/chapitre1.tex
@@ -83,7 +83,7 @@ Les réseaux de neurones artificiels ont été développés à partir de cette v
 \begin{figure}[!h]
 \begin{center}
 	{\includegraphics[scale=0.4]{images/chapter1/neurone_bio.png}\label{neurone}}
-  \caption{Conception d'un neurone artificiel à partir d'un neurone biologique \\ Source : https://sites.google.com/site/tpeia9/home}
+  \caption{Conception d'un neurone artificiel à partir d'un neurone biologique \\ Source : \textit{Les réseaux de neurones artificiels, Introduction au connexionnisme, Claude Touzet}}
 \end{center}
 \end{figure}
 
