--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,1 +1,9 @@
+\addcontentsline{toc}{chapter}{Conclusion}
+
 \chapter*{Conclusion}
+
+Ce projet nous a beaucoup apporté, tant du point de vue humain que technique. En effet, ce fut l'occasion d'apprendre à travailler en groupe. Cela implique d'être capable de s'organiser et de se répartir les tâches pour être efficaces. De plus, ce fut aussi une bonne opportunité pour partager nos connaissances puisque chacun est arrivé avec son propre parcours et sa propre compréhension du sujet.
+
+Le fait de travailler un an sur un projet est très enrichissant puisque l'on peut vraiment se concentrer sur le problème. Ainsi, nous avons tous pu apprendre beaucoup sur le machine learning et plus particulièrement sur les réseaux de neurones. Cet apprentissage a pu se faire d'un point de vue théorique mais aussi technique puisque nous avons implémenté les diverses solutions. Puisque nos résultats étaient satisfaisants, nous avons pu nous intéresser à plusieurs application : génération de texte de Shakespeare, génération de musique.
+
+Nous sommes tous satisfaits de ce projet long et de tout ce que nous avons appris. Nous tenons à remercier nos professeurs pour leur encadrement et leurs conseils tout au long de l'année. Ils furent de bons guides afin de découvrir ce vaste thème que sont les réseaux de neurones.
