--- a/chapitre2.tex
+++ b/chapitre2.tex
@@ -26,7 +26,7 @@ Ainsi la classe Neuron possède de nombreuses sous-classes correspondant à ces 
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.18]{images/uml_neurone_imp1.png}
-\caption{Décomposition de la classe neurone}
+\caption{Hiérarchie de la classe Neuron}
 \label{uml_neurone_imp1}
 \end{center}
 \end{figure}
