--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -58,10 +58,6 @@
 \include{chapitre9}
 
 \include{conclusion}
-
-\nocite{*}
-
-\bibliographystyle{plain}
-\bibliography{compte-rendu.bib}
+\include{biblio}
 
 \end{document}
