--- a/chapitre7.tex
+++ b/chapitre7.tex
@@ -1,5 +1,7 @@
 \chapter{Application : génération de texte}
 
+\label{chapter7}
+
 \section{Introduction}
 
 La première application des LSTM à laquelle nous nous sommes intéressés est la génération de séquences. Le principe est assez explicite: après apprentissage sur un ensemble de séquences, on veut pouvoir en générer une nouvelle qui répond aux mêmes règles grammaticales que les séquences de l'ensemble d'apprentissage.
